--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<!DOCTYPE htm1>
-
-<htm1>
+<!DOCTYPE html>
+<html>
 <head>
-<title>my first HTML</title>
+  <body bgcolor="pink"
+<a href="Introduction.html">INTRODUCTION</a>
+<a href="Visit.html">VISIT</a>
+<a href="selfintro.html">SELF INTRODUCTION</a>
 </head>
-<body>
-  <h1>welcom!</h1>
-  </body>
-  </html>
+<title>Sushila Karki</title>
+<head>
+<body bgcolor="white">
+<div style="background-image:url(img.jpg);background-position:cener;width:600px;height:170px;color:blue;font-size:60px;font-weight:bold;font-family:snap itc;text-align">~My first page~
+</div>
+<p><img src="susila.jpg" width="500"hight="500"</p>
+<h1 style="color:#CD5C5C;font-size:55px;text-align">Sushila Karki</h1>
+<ul style="color:#1000C3F;font-size=50px;text-align":>New book reading is favourite, New place visiting is a pleasure and cooking  is a best!</ul>
+<li><a href="SELF INTRODUCTION.html">Self introduction</a></li><br>
+<li><a href="Visit.html">VISIT</a></li><br>
+<li><a href="home.html">HOME</a></li><br>
+
+</body>
+</html>
